--- a/Test_Robot_Selenium/report.html
+++ b/Test_Robot_Selenium/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3191],[],[[4,0,0,[],[1,61,3129],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,2945],[],[[4,0,0,[],[1,63,2882],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Vegyes Kulcs Teszt","*/home/bela/PycharmProjects/KULCS_Django/Test_Robot_Selenium/vegyes_kulcs_teszt.robot","*vegyes_kulcs_teszt.robot","*Form Submission Test With Keys"]);
+window.output["strings"] = window.output["strings"].concat(["*","*50 Teszt","*/home/bela/PycharmProjects/KULCS_Django/Test_Robot_Selenium/50_teszt.robot","*50_teszt.robot","*Form Submission Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"Vegyes Kulcs Teszt","name":"Vegyes Kulcs Teszt","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"50 Teszt","name":"50 Teszt","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1698701837548;
+window.output["baseMillis"] = 1698735260532;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3194;
+window.output["generated"] = 2948;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
